--- a/Проект 3. О вкусной и здоровой пище/your_first_model.ipynb
+++ b/Проект 3. О вкусной и здоровой пище/your_first_model.ipynb
@@ -9,14 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 2,
    "metadata": {
     "scrolled": false
    },
@@ -65,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -478,7 +471,7 @@
        "19  /Restaurant_Review-g947638-d8155327-Reviews-Ho...   d8155327  "
       ]
      },
-     "execution_count": 99,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -497,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 4,
    "metadata": {
     "scrolled": true
    },
@@ -511,7 +504,7 @@
        "Name: Price Range, dtype: int64"
       ]
      },
-     "execution_count": 100,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -529,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 5,
    "metadata": {
     "scrolled": true
    },
@@ -575,7 +568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 6,
    "metadata": {
     "scrolled": true
    },
@@ -839,7 +832,7 @@
        "4      0       0     0          0       0       0       0  "
       ]
      },
-     "execution_count": 102,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -858,7 +851,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -867,7 +860,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -876,7 +869,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 9,
    "metadata": {
     "scrolled": true
    },
@@ -898,7 +891,7 @@
        "Name: Cuisine Style, Length: 40000, dtype: object"
       ]
      },
-     "execution_count": 105,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -909,7 +902,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -918,7 +911,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 11,
    "metadata": {
     "scrolled": true
    },
@@ -1060,7 +1053,7 @@
        " (\"'Latvian'\", 1)]"
       ]
      },
-     "execution_count": 107,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1088,7 +1081,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 12,
    "metadata": {
     "scrolled": false
    },
@@ -1099,7 +1092,7 @@
        "2.6224"
       ]
      },
-     "execution_count": 108,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1118,7 +1111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1138,7 +1131,7 @@
        "Name: cousine_count, Length: 40000, dtype: int64"
       ]
      },
-     "execution_count": 109,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1149,7 +1142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1169,7 +1162,7 @@
        "Name: is_multiple_cousine, Length: 40000, dtype: int64"
       ]
      },
-     "execution_count": 110,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1181,7 +1174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 15,
    "metadata": {
     "scrolled": false
    },
@@ -1203,7 +1196,7 @@
        "Name: Cuisine Style, Length: 40000, dtype: object"
       ]
      },
-     "execution_count": 111,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1221,7 +1214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 16,
    "metadata": {
     "scrolled": false
    },
@@ -1246,7 +1239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 17,
    "metadata": {
     "scrolled": false
    },
@@ -1379,7 +1372,7 @@
        "max        21.000000             1.000000  "
       ]
      },
-     "execution_count": 113,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1397,7 +1390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1413,38 +1406,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": null,
    "metadata": {
     "scrolled": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0        194.0\n",
-       "1         10.0\n",
-       "2        688.0\n",
-       "3          3.0\n",
-       "4         84.0\n",
-       "         ...  \n",
-       "39995     79.0\n",
-       "39996    542.0\n",
-       "39997      4.0\n",
-       "39998     70.0\n",
-       "39999    260.0\n",
-       "Name: Number of Reviews, Length: 40000, dtype: float64"
-      ]
-     },
-     "execution_count": 116,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 19,
    "metadata": {
     "scrolled": false
    },
@@ -1453,7 +1424,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "<ipython-input-117-43cc67cf024b>:1: FutureWarning: The default value of regex will change from True to False in a future version. In addition, single character regular expressions will*not* be treated as literal strings when regex=True.\n",
+      "<ipython-input-19-43cc67cf024b>:1: FutureWarning: The default value of regex will change from True to False in a future version. In addition, single character regular expressions will*not* be treated as literal strings when regex=True.\n",
       "  df.Reviews = df.Reviews.str.strip('[]').str.replace('[','').str.replace(']','').str.split(',')\n"
      ]
     }
@@ -1464,7 +1435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1473,7 +1444,7 @@
        "'g'"
       ]
      },
-     "execution_count": 144,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1484,7 +1455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1498,7 +1469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 22,
    "metadata": {
     "scrolled": false
    },
@@ -1509,7 +1480,7 @@
        "\" 'A good hotel restaurant'\""
       ]
      },
-     "execution_count": 141,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1520,7 +1491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 23,
    "metadata": {
     "scrolled": false
    },
@@ -1542,7 +1513,7 @@
        "Name: reviews_list, Length: 40000, dtype: object"
       ]
      },
-     "execution_count": 145,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1563,7 +1534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1598,7 +1569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1618,7 +1589,7 @@
        "Name: dates, Length: 40000, dtype: object"
       ]
      },
-     "execution_count": 122,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1641,7 +1612,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 26,
    "metadata": {
     "scrolled": true
    },
@@ -2652,7 +2623,7 @@
        " ...]"
       ]
      },
-     "execution_count": 123,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2673,7 +2644,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 27,
    "metadata": {
     "scrolled": true
    },
@@ -2681,21 +2652,21 @@
     {
      "data": {
       "text/plain": [
-       "0        1436.0\n",
-       "1        1955.0\n",
-       "2        1389.0\n",
-       "3        1705.0\n",
-       "4        1710.0\n",
+       "0        1437.0\n",
+       "1        1956.0\n",
+       "2        1390.0\n",
+       "3        1706.0\n",
+       "4        1711.0\n",
        "          ...  \n",
-       "39995    1444.0\n",
-       "39996    1414.0\n",
-       "39997    4945.0\n",
-       "39998    1591.0\n",
-       "39999    3401.0\n",
+       "39995    1445.0\n",
+       "39996    1415.0\n",
+       "39997    4946.0\n",
+       "39998    1592.0\n",
+       "39999    3402.0\n",
        "Name: days_since_review, Length: 40000, dtype: float64"
       ]
      },
-     "execution_count": 124,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2718,7 +2689,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -2727,7 +2698,7 @@
        "datetime.datetime(2017, 12, 31, 0, 0)"
       ]
      },
-     "execution_count": 125,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2751,7 +2722,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 29,
    "metadata": {
     "scrolled": true
    },
@@ -2976,7 +2947,7 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>[ '12/31/2017',  '11/20/2017']</td>\n",
-       "      <td>1436.0</td>\n",
+       "      <td>1437.0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -3155,7 +3126,7 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>[ '07/06/2017',  '06/19/2016']</td>\n",
-       "      <td>1955.0</td>\n",
+       "      <td>1956.0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -3334,7 +3305,7 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>[ '01/08/2018',  '01/06/2018']</td>\n",
-       "      <td>1389.0</td>\n",
+       "      <td>1390.0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -3513,7 +3484,7 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>[]</td>\n",
-       "      <td>1705.0</td>\n",
+       "      <td>1706.0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -3692,7 +3663,7 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>[ '11/18/2017',  '02/19/2017']</td>\n",
-       "      <td>1710.0</td>\n",
+       "      <td>1711.0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -3906,11 +3877,11 @@
        "4  ['best, place, to, try, a, bavarian, food', , ...        0       0   \n",
        "\n",
        "                            dates  days_since_review  Amsterdam  Athens  \\\n",
-       "0  [ '12/31/2017',  '11/20/2017']             1436.0          0       0   \n",
-       "1  [ '07/06/2017',  '06/19/2016']             1955.0          0       0   \n",
-       "2  [ '01/08/2018',  '01/06/2018']             1389.0          0       0   \n",
-       "3                              []             1705.0          0       0   \n",
-       "4  [ '11/18/2017',  '02/19/2017']             1710.0          0       0   \n",
+       "0  [ '12/31/2017',  '11/20/2017']             1437.0          0       0   \n",
+       "1  [ '07/06/2017',  '06/19/2016']             1956.0          0       0   \n",
+       "2  [ '01/08/2018',  '01/06/2018']             1390.0          0       0   \n",
+       "3                              []             1706.0          0       0   \n",
+       "4  [ '11/18/2017',  '02/19/2017']             1711.0          0       0   \n",
        "\n",
        "   Barcelona  Berlin  Bratislava  Brussels  Budapest  Copenhagen  Dublin  \\\n",
        "0          0       0           0         0         0           0       0   \n",
@@ -4095,7 +4066,7 @@
        "4        0          0           0         0  "
       ]
      },
-     "execution_count": 126,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4108,7 +4079,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 30,
    "metadata": {
     "scrolled": true
    },
@@ -4139,7 +4110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4150,7 +4121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4161,7 +4132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4171,7 +4142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4189,7 +4160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4200,7 +4171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4217,41 +4188,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# list_of_tries = []"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0.211]\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(list_of_tries)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 136,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "MAE: 0.21085\n",
-      "[0.211, 0.21085]\n"
+      "MAE: 0.21102\n"
      ]
     }
    ],
@@ -4259,10 +4203,15 @@
     "# Сравниваем предсказанные значения (y_pred) с реальными (y_test), и смотрим насколько они в среднем отличаются\n",
     "# Метрика называется Mean Absolute Error (MAE) и показывает среднее отклонение предсказанных значений от фактических.\n",
     "\n",
-    "print('MAE:', round(metrics.mean_absolute_error(y_test, y_pred), 5))\n",
-    "list_of_tries.append(round(metrics.mean_absolute_error(y_test, y_pred), 5))\n",
-    "print(list_of_tries)"
+    "print('MAE:', round(metrics.mean_absolute_error(y_test, y_pred), 5))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
